Fix root layout issue and redesign flex box for the nav bar

--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 #root {
   margin: 0 auto;
   text-align: center;
+  height: 100dvh;
+  width: 100dvw;
 }
 
 .defaultLayout {
